# model

./: .env  .env.bak  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGES_SUMMARY.md  CLAUDE.md  Dockerfile  MEMORY_SYSTEM.md  NATURAL_CHANGES.md  QUICKSTART.md  README.md  SEL_ENHANCED_README.md  aiosqlite.py  audio_utils.py  cleanup_memory.py  conftest.py  connor.py  moa_rag_vllm_app.py  pyproject.toml  requirements.txt  run_sel_cli.sh  sel.py  sel_core.py  sel_discord.py  sel_discord_enhanced.py  sel_enhanced.py  sel_memory.json  sel_state.json  sitecustomize.py
.claude/: settings.local.json
.codex/modes/: build.md  default.md  plan.md  review.md  spec.md
.echo_lab/: manifest.json
Echo-Luna-main/: AUTO_SAVE_VECTOR_COMBINATION_GUIDE.md  CPU_GPU_PROCESSING_GUIDE.md  GUI_README.md  Launch HIM GUI.bat  Launch HIM GUI.ps1  Launch Optimized HIM.bat  PERFORMANCE_GUIDE.md  README.md  TEXT_VECTOR_MEMORY_GUIDE.md  examine_luna_db.py  gpu_utils.py  him_demo.py  him_gui.py  him_gui_optimized.py  him_machine_learning.py  him_model.py  launch_him_gui.py  launch_optimized_him.py  quick_luna_training.py  requirements.txt  run_him.py  run_sentience_sim.py  sentience_report.json  sentience_sim.py  vector_image.py
Echo-Luna-main/autogen_sim/: __init__.py  config.py  display.py  engine.py  regeneration.py  report.py
Echo-Luna-main/echolab/: __init__.py  bench.py  cli.py  metrics.py  persist.py  reflect.py  regen.py  runner.py  state.py  stop.py
Echo-Luna-main/him/: __init__.py  api.py  simulation.py  storage.py
Echo-Luna-main/rust/echo_luna_rust/: .gitignore  Cargo.toml  README.md  pyproject.toml
Echo-Luna-main/rust/echo_luna_rust/src/: lib.rs
config/: __init__.py
data/: characters.db  test_gifts.db  test_moods.db  test_name_calling_profiles.db  test_profiles.db  test_relationships.db  test_secrets.db
scripts/: download_piper_voice.sh  fix_env.sh
sel_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: __init__.py
tests/: test_moa_rag_vllm_app.py  test_sel_intent.py
textblob/: __init__.py
(+93833 files in other folders)
