[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sel-bot"
version = "0.2.0"
description = "SEL: Systematic Emotional Logic – MoE bot with memory, Discord client, VC TTS/STT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.3.2",
  "transformers>=4.44.0",
  "accelerate>=0.33.0",
  "numpy>=1.26",
  "faster-whisper>=1.0.0",
  "piper-tts>=1.2.0",
  "bitsandbytes>=0.44.1",
]

[project.scripts]
sel-cli = "sel:main"
sel-enhanced = "sel_enhanced:main"
sel-discord = "sel_discord:main"
sel-discord-enhanced = "sel_discord_enhanced:main"

[tool.setuptools]
packages = []
py-modules = [
  "audio_utils",
  "cleanup_memory",
  "connor",
  "sel",
  "sel_core",
  "sel_discord",
  "sel_discord_enhanced",
  "sel_enhanced",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.6.4",
  "pytest>=8.3.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
fixable = ["ALL"]
