[package]
name = "echo_luna_rust"
version = "0.1.0"
edition = "2021"
description = "Rust extensions accelerating Echo-Luna primitives"
authors = ["Echo-Luna Contributors"]
license = "MIT"

[lib]
name = "echo_luna_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
